# Homomorphic_Encryption_for_Genetic_Data

./: .gitignore  CMakeLists.txt  answer.cpp  cloud.cpp  main.cpp  operation.cpp  result.cpp  test.cpp
